🔧 Vercel Functions 설정 추가
- api/cron-daily-news.js 함수 설정 추가
- api/news-priority-system.js 함수 설정 추가
- 모든 API 함수에 maxDuration: 30초 설정

--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,12 @@
   "functions": {
     "api/news-clipper.js": {
       "maxDuration": 30
+    },
+    "api/cron-daily-news.js": {
+      "maxDuration": 30
+    },
+    "api/news-priority-system.js": {
+      "maxDuration": 30
     }
   },
   "env": {
